--- a/api_route/views/config.xml
+++ b/api_route/views/config.xml
@@ -9,8 +9,8 @@
       <field name="inherit_id" ref="base.res_config_settings_view_form"/>
       <field name="arch" type="xml">
         <xpath expr="//div[hasclass('settings')]" position="inside">
-          <div class="app_settings_block" data-string="Events" string="React" data-key="react">
-            <h2>React Settings</h2>
+          <div class="app_settings_block" data-string="Events" string="Api route" data-key="api_route">
+            <h2>Api route settings</h2>
             <div class="row mt-12 o_settings_container">
               <div class="col-6 col-lg-6 o_setting_box">
                 <div class="o_setting_right_pane">
@@ -27,13 +27,13 @@
       </field>
     </record>
 
-    <record id="action_react_settings" model="ir.actions.act_window">
+    <record id="action_api_route_settings" model="ir.actions.act_window">
       <field name="name">Settings</field>
       <field name="type">ir.actions.act_window</field>
       <field name="res_model">res.config.settings</field>
       <field name="view_mode">form</field>
       <field name="target">inline</field>
-      <field name="context">{'module' : 'react'}</field>
+      <field name="context">{'module' : 'api_route'}</field>
     </record>
   </data>
 
