--- a/api_route/views/config.xml
+++ b/api_route/views/config.xml
@@ -14,10 +14,10 @@
             <div class="row mt-12 o_settings_container">
               <div class="col-6 col-lg-6 o_setting_box">
                 <div class="o_setting_right_pane">
-                  <span class="o_form_label">Website</span>
-                  <div class="text-muted">Website uri</div>
+                  <span class="o_form_label">Service</span>
+                  <div class="text-muted">Service name</div>
                   <div class="content-group">
-                    <field name="website" />
+                    <field name="service" />
                   </div>
                 </div>
               </div>
